--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine
-MAINTAINER Wendell Sun <sunwen@kxkr.com>
+LABEL maintainer="Wendell"
 
-RUN apk --no-cache add tzdata ca-certificates && update-ca-certificates && ls -al /etc/ssl/
-RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
-RUN echo "Asia/Shanghai" >  /etc/timezone
+RUN apk --no-cache add tzdata ca-certificates && update-ca-certificates \
+			&& cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+			&& echo "Asia/Shanghai" >  /etc/timezone
 
 CMD ["/bin/sh"]
