--- a/kcptun-client/Dockerfile
+++ b/kcptun-client/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine
-MAINTAINER Wendell Sun <iwendellsun@gmail.com>
-WORKDIR /
-ENV MODE="fast2"
-RUN apk add --no-cache wget
-RUN wget https://github.com/xtaci/kcptun/releases/download/v20161202/kcptun-linux-amd64-20161202.tar.gz --no-check-certificate -O kcptun.gz
-RUN tar -zxvf kcptun.gz && rm kcptun.gz server_linux_amd64 && mv client_linux_amd64 kcptun
+LABEL maintainer="Wendell"
+
+RUN apk add --no-cache wget \
+			&& wget https://github.com/xtaci/kcptun/releases/download/v20171201/kcptun-linux-amd64-20171201.tar.gz --no-check-certificate -O kcptun.gz \
+			&& tar -zxvf kcptun.gz && rm kcptun.gz server_linux_amd64 && mv client_linux_amd64 kcptun_client
+
 EXPOSE 3389
-ENTRYPOINT ["/bin/sh", "-c", "/kcptun -r $R -l ':3389' --mode $MODE"]
+ENTRYPOINT ["/kcptun_client","-l",":3389"]
